# local-multimodal-chatbot

./: .gitignore  README.md  app.py  llm_chains.py  package-lock.json  package.json  pyproject.toml  requirement.txt  requirements.txt  sow.txt  utlis.py
src/: app.py  config.yaml  llm_chains.py  prompt_templates.py
